# demo-repository

./: .coverage  .env  .gitignore  Gemfile  Progettazione.mdj  README.md  _config.yml  completeIssue.js  coverage.json  desktop.ini  index.markdown  istruzioni jekyll.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: nuovo-documento.md
.github/workflows/: Closecompleted.js  auto-assign.yml  ciclomaticComplexity.yml  closeCompleted.js  closeCompleted.mjs  closeCompleted.yml  codeQuality.yaml  coverage.yml  package.json
Test_Python/: application.py  pyproject.toml  requirements.txt
Test_Python/app/: app.py
Test_Python/app/Domain/: Domanda.py  ElementoDomanda.py  Risposta.py  RisultatoTest.py  SetElementiDomanda.py  __init__.py
Test_Python/app/application/: ServizioSetAddElementi.py  ServizioSetDeleteElementi.py  ServizioSetEditNome.py  ServizioSetGetAllElementi.py
Test_Python/db/: docker-compose.yml
Test_Python/src/application/: AddElementoDomandaService.py  ElementoDomandaServices.py  ExecuteTestOnSetService.py  ExecuteTestService.py  ExecuteTestServices.py  GetAllElementiDomandaService.py  GetRisultatoSingolaDomandaService.py  RisultatoTestServices.py  ServizioSetGetElementi.py  ServizioSetUpdateElementi.py  __init__.py
Test_Python/src/application/evaluation/: AlgoritmoValutazioneRisposte.py  AlgoritmoValutazioneRisposteImpl.py
Test_Python/src/application/services/: AddRisultatoTestService.py  AddSetElementiDomandaService.py  DeleteElementiDomandaService.py  DeleteSetElementiDomandaService.py  EditNomeSetElementiDomandaService.py  ExecuteTestOnSetService.py  GetAllRisultatiSingoleDomandeService.py  GetAllRisultatiTestService.py  GetAllSetElementiDomandaService.py  GetElementoDomandaService.py  GetRisultatoTestService.py  GetSetElementiDomandaService.py  UpdateElementiDomandaSetService.py  UpdateElementoDomandaService.py
Test_Python/src/domain/: RisultatoTest.py  SetElementiDomanda.py
Test_Python/src/domain/dtos/: RisultatoTestDTO.py  __init__.py
Test_Python/test/: test_esempioMock.py
Test_Python/test/Domain/: test_Domanda.py  test_ElementoDomanda.py  test_Risposta.py  test_RisultatoTest.py  test_SetElementiDomanda.py
_layouts/: default.html  index.html
_posts/: 2024-11-05-welcome-to-jekyll.markdown
_site/: 404.html  feed.xml  index.html  istruzioni jekyll.txt
_site/2024/11/05/: welcome-to-jekyll.html
_site/about/: index.html
doc_rod2cod/: Gemfile  _config.yml
doc_rod2cod/_site/: 404.html  feed.xml  index.html
doc_rod2cod/_site/about/: index.html
docs/: Gemfile  _config.yml
frontendTest/.github/workflows/: test.yml
frontendTest/App/src/: main.js
frontendTest/App/src/views/: AggiungiDomanda.vue  (+3 more)
src/: circle.py  main.py  shape.py  square.py  tooMuchLoops.py
tests/: test_circle.py  test_main.py  test_square.py
(+65 files in other folders)
