[project]
name = "pytestreport"
version = "0.1.0"
description = "Simple project to generate a report of pytest results and calculate ciclomatic complexity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "radon>=6.0.1",
]

# Configuration for the radon module, the one that calculates the cyclomatic complexity
[tool.radon]
ignore = "tests,docs" #ignores the previous directories, different from exclude
cc_min = 'B'
cc_max = 'F'
show_complexity = true
# output_file = ".radon_report.json"


# Configuration for the coverage module, the one that calculates the test coverage
[tool.coverage.run]
command_line = "-m pytest"
branch = true
omit = [
    ".venv/*",
    "tests/*",
    "__init__.py",
    ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]


skip_covered = false
show_missing = true
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

# Configuration for the pytest module, the one that runs the unit tests
[tool.pytest]
markers = ["slow"] # Custom marker for slow tests, to be used with the -m option